Ensure no horizontal overlap between sidebar and map.

--- a/src/main/webapp/index-style.css
+++ b/src/main/webapp/index-style.css
@@ -8,6 +8,7 @@
   position: absolute;
   width: 100%;
   top: 10%;
+  left: 15%;
   z-index: -1;
 }
 
